<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_back"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:background="@drawable/image_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/circle"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rawan_shawky"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/imageProfile"
            app:layout_constraintStart_toStartOf="@id/imageProfile"
            app:layout_constraintEnd_toEndOf="@id/imageProfile"
            android:layout_marginTop="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:weightSum="3"
        android:layout_marginTop="170dp"
        android:background="@drawable/linear"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/nameLinear"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/name"
                android:textColor="@color/darkPurple"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginVertical="25dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/nameValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/name"
                android:textSize="18sp"
                android:textColor="@color/gray"
                android:layout_marginVertical="25dp"
                android:textAlignment="textEnd"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/compat1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/darkPurple"
            android:layout_marginHorizontal="8dp"/>

        <LinearLayout
            android:id="@+id/phoneLinear"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/phoneLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/phone"
                android:textColor="@color/darkPurple"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginVertical="25dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/phoneValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/phone"
                android:textSize="18sp"
                android:textColor="@color/gray"
                android:layout_marginVertical="25dp"
                android:textAlignment="textEnd"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/compat2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/darkPurple"
            android:layout_marginHorizontal="8dp"/>

        <LinearLayout
            android:id="@+id/descriptionLinear"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/description"
                android:textColor="@color/darkPurple"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginVertical="25dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/descriptionValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/my_number"
                android:textSize="18sp"
                android:textColor="@color/gray"
                android:layout_marginVertical="25dp"
                android:textAlignment="textEnd"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>