<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@id/endGuideLine"
        android:hint="@string/name"
        app:boxStrokeColor="@color/darkPurple"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPersonName"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneInp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/phone_number"
        app:boxStrokeColor="@color/darkPurple"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:layout_constraintTop_toBottomOf="@id/nameInp"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@id/endGuideLine"
        app:startIconDrawable="@drawable/baseline_phone_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="8dp"
            android:textColor="@color/gray"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/desInp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/description"
        app:boxStrokeColor="@color/darkPurple"
        app:layout_constraintTop_toBottomOf="@id/phoneInp"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@id/endGuideLine">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/des_et"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/gray"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_btn"
        style="@android:style/Widget.Button"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desInp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_contacts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_btn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>